# Moonlight

./: README.md
userInterface/MoonLight/: CMakeLists.txt  Main.qml  application.cpp  application.h  calibrator.cpp  calibrator.h  main.cpp  networkmanager.cpp  qml.qrc  resources.qrc
userInterface/MoonLight/Components/: MoonButton.qml  MoonComboBox.qml  MoonInput.qml  MoonKeyboard.qml  MoonKeypad.qml  MoonProgressBar.qml  MoonSpinBox.qml  MoonSwitch.qml  MoonToggle.qml
userInterface/MoonLight/Pages/: CalibrationPage.qml
userInterface/MoonLight/build-moonLight-Desktop_Qt_6_5_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appmoonLight  build.ninja  cmake_install.cmake
userInterface/MoonLight/build-moonLight-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
userInterface/MoonLight/build-moonLight-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appmoonLight.cmake  Qt6_QmlPlugins_Imports_appmoonLight.rsp
userInterface/MoonLight/build-moonLight-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
userInterface/MoonLight/build-moonLight-Desktop_Qt_6_5_2_GCC_64bit-Debug/.rcc/: appmoonLight_raw_qml_0.qrc  qmake_moonLight.qrc
userInterface/MoonLight/build-moonLight-Desktop_Qt_6_5_2_GCC_64bit-Debug/appmoonLight_autogen/: deps  moc_predefs.h
userInterface/MoonLight/build-moonLight-Desktop_Qt_6_5_2_GCC_64bit-Debug/meta_types/: appmoonLight_json_file_list.txt  appmoonLight_json_file_list.txt.timestamp  qt6appmoonlight_debug_metatypes.json.gen
userInterface/MoonLight/build-moonLight-Desktop_Qt_6_5_2_GCC_64bit-Debug/moonLight/: DiagnosePage.qml  Main.qml  MoonButton.qml  MoonSpinBox.qml  MoonSwitch.qml  qmldir  (+1 more)
userInterface/MoonLight/build-moonLight-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appmoonLight  appmoonlight_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
userInterface/MoonLight/moonLight/: CMakeLists.txt  CalibrationPage.qml  Main.qml  MoonButton.qml  MoonInput.qml  MoonSpinBox.qml  calibrator.cpp  calibrator.h  main.cpp  networkmanager.cpp  networkmanager.h
(+835 files in other folders)
